--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
 # Mainnet RPC URL used for fetching blockchain data. Alchemy is recommended.
-PONDER_RPC_URL_998=https://api.hyperliquid-testnet.xyz/evm
+PONDER_RPC_URL_1=
 PONDER_LOG_LEVEL=debug
 
 # (Optional) Postgres database URL. If not provided, SQLite will be used. 
